--- a/app/src/main/res/layout/trip_field.xml
+++ b/app/src/main/res/layout/trip_field.xml
@@ -51,21 +51,25 @@
                     android:id="@+id/tripTitleTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="Trip" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/userNameTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="Karola" />
+                    android:layout_weight="1" />
 
                 <TextView
-                    android:id="@+id/tripDescriptionTextView"
+                    android:id="@+id/tripRouteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="2" />
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/tripDateTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
