--- a/app/src/main/res/layout/trip_field.xml
+++ b/app/src/main/res/layout/trip_field.xml
@@ -45,31 +45,57 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:background="@drawable/trip_information_gradient"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tripTitleTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/userNameTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/tripRouteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="@color/dark_grey"
+                    android:gravity="center"/>
 
-                <TextView
-                    android:id="@+id/tripDateTextView"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tripTimeTextView"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:gravity="center" />
+
+                    <TextView
+                        android:id="@+id/tripDateTextView"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:gravity="left" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/userNameTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textStyle="italic"
+                    android:textColor="@color/dark_grey"
+                    android:gravity="right" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
