--- a/app/src/main/res/layout/trip_field.xml
+++ b/app/src/main/res/layout/trip_field.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tripFieldLayout"
     android:layout_width="match_parent"
     android:layout_height="150dp">
@@ -13,90 +13,74 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@id/coverPictureImageView"
-        android:layout_alignLeft="@id/coverPictureImageView"
-        android:layout_alignRight="@id/coverPictureImageView"
-        android:layout_alignTop="@id/coverPictureImageView"
-        android:layout_margin="1dp"
+        android:layout_height="75dp"
+        android:layout_gravity="bottom"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <ImageView
+            android:id="@+id/profilePictureImageView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:scaleType="centerCrop"
+            android:src="@drawable/example_image" />
 
-            <ImageView
-                android:id="@+id/profilePictureImageView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/trip_information_gradient"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tripTitleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
-                android:src="@drawable/example_image" />
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tripRouteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/dark_grey" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:background="@drawable/trip_information_gradient"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tripTitleTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:id="@+id/tripTimeTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/tripRouteTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:id="@+id/tripDateTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textColor="@color/dark_grey"
-                    android:gravity="center"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tripTimeTextView"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textColor="@color/black"
-                        android:gravity="center" />
-
-                    <TextView
-                        android:id="@+id/tripDateTextView"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textColor="@color/black"
-                        android:gravity="left" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/userNameTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textStyle="italic"
-                    android:textColor="@color/dark_grey"
-                    android:gravity="right" />
+                    android:gravity="left"
+                    android:textColor="@color/black" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/userNameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="@color/dark_grey"
+                android:textStyle="italic" />
         </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
+</FrameLayout>
