--- a/app/src/main/res/layout/new_trip_route_activity.xml
+++ b/app/src/main/res/layout/new_trip_route_activity.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/newTripLayout"
+    android:id="@+id/newTripRouteLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <include
+        layout="@layout/stop_input_field"/>
 
 </LinearLayout>
