--- a/app/src/main/res/layout/stop_input_field.xml
+++ b/app/src/main/res/layout/stop_input_field.xml
@@ -43,7 +43,7 @@
             android:layout_weight="1">
 
             <EditText
-                android:id="@+id/inputStationTime"
+                android:id="@+id/inputStationTimeEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_time"
