--- a/app/src/main/res/layout/new_trip_route_activity.xml
+++ b/app/src/main/res/layout/new_trip_route_activity.xml
@@ -5,7 +5,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/stop_input_field"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:fillViewport="true">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/stop_input_field" />
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/addDescription"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/next" />
 </LinearLayout>
