--- a/app/src/main/res/layout/stop_input_field.xml
+++ b/app/src/main/res/layout/stop_input_field.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/inputStationDateEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:hint="@string/hint_date"
                 android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
@@ -46,6 +47,7 @@
                 android:id="@+id/inputStationTimeEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:hint="@string/hint_time"
                 android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
