--- a/app/src/main/res/layout/new_trip_offer_activity.xml
+++ b/app/src/main/res/layout/new_trip_offer_activity.xml
@@ -32,7 +32,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/confirmDescriptionButton"
+        android:id="@+id/confirmOfferButton"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
