--- a/app/src/main/res/layout/full_trip_activity.xml
+++ b/app/src/main/res/layout/full_trip_activity.xml
@@ -54,8 +54,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/joinButton"
-        android:text="@string/join"
+        android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
