--- a/app/src/main/res/layout/stop_input_field.xml
+++ b/app/src/main/res/layout/stop_input_field.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/inputStationName"
+            android:id="@+id/inputStationNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_station"
