--- a/app/src/main/res/layout/departure_input_field.xml
+++ b/app/src/main/res/layout/departure_input_field.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/inputStationNameEditText"
+            android:id="@+id/inputDepartureStationNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_station"
+            android:hint="@string/hint_departure_station"
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
@@ -29,7 +29,7 @@
             android:layout_weight="3">
 
             <EditText
-                android:id="@+id/inputStationDateEditText"
+                android:id="@+id/inputDepartureStationDateEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -44,7 +44,7 @@
             android:layout_weight="1">
 
             <EditText
-                android:id="@+id/inputStationTimeEditText"
+                android:id="@+id/inputDepartureStationTimeEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:editable="false"
