--- a/app/src/main/res/layout/full_trip_activity.xml
+++ b/app/src/main/res/layout/full_trip_activity.xml
@@ -8,7 +8,7 @@
         layout="@layout/trip_field"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"/>
+        android:layout_weight="2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,21 +23,35 @@
             android:layout_weight="2"
             android:text="@string/Description"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tripDescriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_weight="3"
-            android:id="@+id/tripDescriptionTextView"
-            android:textColor="@color/dark_grey"/>
+            android:gravity="center"
+            android:textColor="@color/dark_grey" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/confirmButton"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/delete"/>
+
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
 </LinearLayout>
