--- a/app/src/main/res/layout/trips_group.xml
+++ b/app/src/main/res/layout/trips_group.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView
-    android:id="@+id/tripsGroupView"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/tripsGroupView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="@null"
     android:dividerHeight="0dp"
-    android:orientation="vertical"/>
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
