--- a/app/src/main/res/layout/trip_field.xml
+++ b/app/src/main/res/layout/trip_field.xml
@@ -20,16 +20,14 @@
 
         <ImageView
             android:id="@+id/profilePictureImageView"
-            android:layout_width="0dp"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:scaleType="centerCrop"
             android:src="@drawable/example_image" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
             android:background="@drawable/trip_information_gradient"
             android:orientation="vertical">
 
