--- a/app/src/main/res/layout/new_trip_route_activity.xml
+++ b/app/src/main/res/layout/new_trip_route_activity.xml
@@ -3,6 +3,7 @@
     android:id="@+id/newTripRouteLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_margin"
     android:orientation="vertical">
 
     <LinearLayout
