--- a/app/src/main/res/layout/new_trip_offer_activity.xml
+++ b/app/src/main/res/layout/new_trip_offer_activity.xml
@@ -36,6 +36,7 @@
     <Button
         android:id="@+id/confirmOfferButton"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/dark_green"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/next" />
