--- a/app/src/main/res/layout/new_trip_route_activity.xml
+++ b/app/src/main/res/layout/new_trip_route_activity.xml
@@ -34,5 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:backgroundTint="@color/dark_green"
         android:text="@string/next" />
 </LinearLayout>
