--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="text_gradient_start">#cfffffff</color>
     <color name="text_gradient_end">#6fffffff</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="dark_grey">#222222</color>
     <color name="dark_green">#00bfa5</color>
     <color name="dark_pink">#ff4081</color>
